Night shift Fix
1) Захар, твоя картинка с 1 карты улетела в херо секцию. По макету мобилки она не перекрывает надпис. бг я перенес с Общего класса контейнер на твой контеинер продуктс.

2) Костя, в Таблет версии и мобилке на хедер наползает секция Херо ( на картинку) постав в Таблет марджин боттом 16px а на мобилке 50px на класс header. (посмотрим поправит ли)

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -199,8 +199,8 @@
         font-size: 12px;
         line-height: calc(17 / 12);
         margin-bottom: 12px;
-        fill: red;
-        // color: var(--color-primary);
+        
+        color: var(--color-primary);
         @include desktop {
             margin-bottom: 24px;
         }
@@ -212,9 +212,8 @@
     }
     
     &__icon {
-        // fill: var(--color-primary);
-        color: red;
-        fill: red;
+        fill: var(--color-primary);
+        
     }
 }
 
