--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,7 +29,7 @@ body {
   font-family: var(--main-font);
   font-style: normal;
   font-size: 14px;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   
 
 }
